Wed Feb 24 21:09:19 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc(main): Remember to delete the parser!

	* htlib/String.cc(String(char *s, int len)): Remove redundant copy.

	* htsearch/Display.cc(display): Free DocumentRef memory after
	displaying them.
	(displayMatch): Fix memory leak when documents did not have anchors.

Wed Feb 24 15:18:26 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Configuration.cc(Add): Fix small leak in locale code.

	* htlib/String.cc: Fix up code to be cleaner with memory
	allocation, inline next_power_of_2.

Mon Feb 22 22:13:49 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/String.cc, htlib/htString.h: Fix some memory leaks.

Mon Feb 22 08:52:19 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Dictionary.h, htlib/Dictionary.cc(hashCode): Check if key
	can be converted to an integer using strtol. If so, use the
	integer as the hash code.

	* htlib/HtVector.h, htlib/HtVector.cc: Implement Release() method
	and make sure delete calls are done properly.

	* htsearch/ResultList.h, htsearch/ResultList.cc(elements): Use HtVector
	instead of List.

	* htsearch/parser.cc: Ditto.
	
Sun Feb 21 16:13:59 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtHeap.h, htlib/HtHeap.cc: Add new class.

	* htlib/Makefile.in: Compile it.

	* htlib/HtVector.h, htlib/HtVector.cc: Add Assign() to assign to
	elements of vectors.

Sun Feb 21 14:45:26 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc: Add patch from Jerome Alet <alet@unice.fr>
	to allow '.' in config field but NOT './' for security reasons.

	* htdig/HTML.cc: Add patch from Gabriele to ensure META
	descriptions are parsed, even if 'description' is added to the
	keyword list.

Sun Feb 21 14:43:44 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htsearch/parser.h, htsearch/parser.cc: Clean up patch made for
	error messages, made on Feb 16.
